@@ -3,7 +3,6 @@ package com.dsquare.hibour.network;
 import android.content.Context;
 import android.util.Log;
 
-import com.android.volley.DefaultRetryPolicy;
 import com.android.volley.Request;
 import com.android.volley.Response;
 import com.android.volley.VolleyError;
@@ -23,40 +22,40 @@ import java.net.URL;
  */
 public class LocationClient {
 
-    private HibourConnector mConnector;
+  private HibourConnector mConnector;
 
-    public LocationClient(Context context) {
-        mConnector = HibourConnector.getInstance(context);
-    }
+  public LocationClient(Context context) {
+    mConnector = HibourConnector.getInstance(context);
+  }
 
-    /* To get all posts*/
-    public void getAddress(String lat,String lon,final WebServiceResponseCallback callback){
-        try {
-            String urlStr = Constants.URL_GOOGLE_LOC_ADDRESS+"latlng="+lat+","+lon+"&key="
-                    +Constants.GOOGLE_ADDRESS_API_KEY;
-            URL url = new URL(urlStr);
-            URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort()
-                    , url.getPath(), url.getQuery(), url.getRef());
-            url = uri.toURL();
-            Log.d("url", "" + url);
-            JsonObjectRequest addressRequest = new JsonObjectRequest(Request.Method.GET
-                    , url.toString(), (String) null, new Response.Listener<JSONObject>() {
+  /* To get all posts*/
+  public void getAddress(String lat, String lon, final WebServiceResponseCallback callback) {
+    try {
+      String urlStr = Constants.URL_GOOGLE_LOC_ADDRESS + "latlng=" + lat + "," + lon + "&key="
+          + Constants.GOOGLE_ADDRESS_API_KEY;
+      URL url = new URL(urlStr);
+      URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort()
+          , url.getPath(), url.getQuery(), url.getRef());
+      url = uri.toURL();
+      Log.d("url", "" + url);
+      JsonObjectRequest addressRequest = new JsonObjectRequest(Request.Method.GET
+          , url.toString(), (String) null, new Response.Listener<JSONObject>() {
 
-                @Override
-                public void onResponse(JSONObject response) {
-                    callback.onSuccess(response);
-                }
-            }, new Response.ErrorListener() {
-                @Override
-                public void onErrorResponse(VolleyError error) {
-                    callback.onFailure(error);
-                }
-            });
-            mConnector.addToRequestQueue(addressRequest);
-        } catch (MalformedURLException e) {
-            e.printStackTrace();
-        } catch (URISyntaxException e) {
-            e.printStackTrace();
+        @Override
+        public void onResponse(JSONObject response) {
+          callback.onSuccess(response);
         }
+      }, new Response.ErrorListener() {
+        @Override
+        public void onErrorResponse(VolleyError error) {
+          callback.onFailure(error);
+        }
+      });
+      mConnector.addToRequestQueue(addressRequest);
+    } catch (MalformedURLException e) {
+      e.printStackTrace();
+    } catch (URISyntaxException e) {
+      e.printStackTrace();
     }
+  }
 }
